# detaf

./: .gitignore  README.md  pyproject.toml  todo.md
.github/workflows/: publish.yml  test.yml
src/detaf/: cloud.py  lib.py  metar.py  parser.py  phenomenon.py  temperature.py  temporal.py  visibility.py  weather.py  wind.py  wx.py
tests/: test_interface.py  test_invariants.py  test_template.py
