[project]
name = "detaf"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "andrewgryan", email = "andrew.ryan@metoffice.gov.uk"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
