[project]
name = "detaf"
version = "0.1.0"
description = "Decode TAF files"
authors = [
    {name = "andrewgryan", email = "andrew.ryan@metoffice.gov.uk"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "hypothesis>=6.118.7",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
fmt = "ruff format"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.7.3",
]
